fix the horizontal scroll
fix the horizontal scroll caused by iframe inside the tweet button

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -362,6 +362,9 @@ h4 {
       width: 124px;
       margin-top: -7px;
     }
+    #tweetbtn iframe{
+      width: 124px !important;
+    }
     #footer-nav {
       ul {
       }
